# go_version_manager

./: .gitignore  .gitjournal.toml  .project  CHANGELOG.md  Cargo.toml  README.md  build.rs  go1.15.6.linux-amd64.tar.gz.REMOVED.git-id  golang_download.py  test_18-55-00.toml
.github/workflows/: build-release.yml  check-clippy-fmt.yml  codecov.yml  publish-on-tag.yml  test_and_clippy.yml
go_version/: Cargo.toml
go_version/src/: download.rs  goversion.rs  lib.rs  tokio_chunk_test.rs
src/: check_list.rs  command.rs  config.rs  consts.rs  decompressor.rs  envs.rs  error.rs  github.rs  goversion.rs  installed.rs  main.rs  utils.rs
src/commands/: completions.rs  download.rs  init.rs  install.rs  mod.rs  update.rs  utils.rs
