[package]
name = "go_version_manager"
version = "0.8.6"
authors = ["x0f5c3 <x0f5c3@tutanota.com>"]
edition = "2018"
description = "A small program to download chosen golang version"
readme = "README.md"
homepage = "https://github.com/x0f5c3/go_version_manager"
repository = "https://github.com/x0f5c3/go_version_manager"
license-file = "LICENSE"
keywords = ["golang","packages","download"]
categories = ["command-line-utilities","development-tools"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soup = "0.5.1"
pretty_env_logger = "0.4.0"
indicatif = { version = "0.16.0", features = ["rayon", "improved_unicode"] }
human-panic = "1.0.3"
clap = { git = "https://github.com/x0f5c3/clap", branch="master", features = ["cargo", "derive", "wrap_help", "unicode", "regex", "unstable-replace"] }
clap_complete = { git = "https://github.com/x0f5c3/clap", branch="master" }
directories = "4.0.1"
console = "0.14.0"
git2 = { version = "*", features = ["vendored-libgit2", "vendored-openssl"] }
num_cpus = "1.13.0"
thiserror = "1.0.22"
dialoguer = "0.8.0"
quit = "1.1.2"
duct = "*"
serde_json = "1.0.69"
paris = { version = "*", features = ["macros"] }
rayon = "*"
lazy_static = "*"
serde = { version = "*", features = ["derive"] }
itertools = "*"
anyhow = "*"
regex = "*"
toml = { version = "0.5.8", features = ["preserve_order"] }
shadow-rs = "0.11.0"
which = "4.2.5"
tracing-appender = "0.2.2"
tracing-unwrap = "0.9.2"
tokio-uring = "0.3.0"
chrono = "0.4.19"


[dependencies.tracing-error]
version = "0.2.0"
[dependencies.derive_more]
version = "*"
features = ["display"]
default-features = false


[dependencies.tracing-subscriber]
version = "0.3.11"
features = ["local-time"]

[dependencies.tracing]
version = "0.1.33"
features = ["log"]

[dependencies.semver]
version = "1.0.7"
features = ["serde"]


[build-dependencies]
shadow-rs = "0.11.0"
[dependencies.reqwest]
version = "*"
features = ["blocking"]

[dependencies.manic]
version = "*"
default-features = false
features = ["progress", "json", "threaded"]

[target.'cfg(windows)'.dependencies]
zip = "*"
zip-extensions = "*"
self_update = { version = "0.27.0", default-features = false, features = ["rustls", "archive-zip", "compression-zip-deflate"] }

[target.'cfg(not(windows))'.dependencies]
flate2 = "1.0.22"
tar = "*"
self_update = { version = "0.27.0", default-features = false, features = ["rustls", "archive-tar", "compression-flate2"] }

[badges]
github = { repository = "x0f5c3/go_version_manager" }
