[package]
name = "go_version_manager"
version = "0.8.7"
authors = ["x0f5c3 <x0f5c3@tutanota.com>"]
edition = "2021"
description = "A small program to download chosen golang version"
readme = "README.md"
homepage = "https://github.com/x0f5c3/go_version_manager"
repository = "https://github.com/x0f5c3/go_version_manager"
license-file = "LICENSE"
keywords = ["golang","packages","download"]
categories = ["command-line-utilities","development-tools"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4.0"
indicatif = { version = "0.17.1", features = ["rayon", "improved_unicode"] }
human-panic = "1.0.3"
clap = { version = "4.0.11", features = ["cargo", "derive", "wrap_help", "unicode", "unstable-replace"] }
clap_complete = "4.0.2"
directories = "4.0.1"
console = "0.15.1"
num_cpus = "1.13.0"
dialoguer = "0.10.2"
quit = "1.1.2"
duct = "0.13.5"
serde_json = "1.0.69"
paris = { version = "1.5.13", features = ["macros"] }
rayon = "1.5.3"
lazy_static = "1.4.0"
serde = { version = "1.0.145", features = ["derive"] }
itertools = "0.10.5"
anyhow = "1.0.65"
regex = "1.6.0"
toml = { version = "0.5.8", features = ["preserve_order"] }
shadow-rs = "0.18.0"
which = "4.2.5"


[dependencies.figment]
version = "0.10.8"
features = ["toml", "env"]

[dependencies.tracing-error]
version = "0.2.0"


[dependencies.tracing-subscriber]
version = "0.3.11"
features = ["local-time"]

[dependencies.tracing]
version = "0.1.33"
features = ["log"]

[dependencies.semver]
version = "1.0.7"
features = ["serde"]


[build-dependencies]
shadow-rs = "0.18.0"
[dependencies.reqwest]
version = "*"
features = ["blocking"]

[dependencies.manic]
version = "*"
default-features = false
features = ["progress", "json", "threaded"]

[target.'cfg(windows)'.dependencies]
zip = "*"
zip-extensions = "*"

[target.'cfg(unix)'.dependencies]
flate2 = "1.0.22"
tar = "*"

[badges]
github = { repository = "x0f5c3/go_version_manager" }
