[package]
name = "go_version"
version = "0.1.0"
authors = ["x0f5c3 <x0f5c3@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soup = "*"
tokio = { version = "*", features = ["full"]}
sha2 = "*"
duct = "*"
versions = "*"
indicatif = "*"
human-panic = "*"
structopt = "*"
console = "*"
anyhow = "*"
quit = "*"
thiserror = "*"
runas = "*"
log = "*"
futures = "*"
tempfile = "*"
url = "*"

[dependencies.reqwest]
version = "*"
default-features = false
features = ["rustls-tls", "stream", "gzip"]
